feat: fixing some issues with the product use case